erDiagram
    provincia o|--o{ cliente : domicilio
    cliente ||--o{ contrato : posee
    cuenta_contable o|--o{ contrato : sugiere
    contrato ||--o{ comprobante : origina
    periodo_servicio ||--o{ comprobante : clasifica
    cuenta_contable ||--o{ comprobante : imputa
    comprobante o|--o{ comprobante : factura_origen
    provincia o|--o{ categoria_fiscal : agrupa
    comprobante ||--o{ distribucion_comprobante : distribuye
    categoria_fiscal ||--o{ distribucion_comprobante : clasifica
    centro_costo ||--o{ distribucion_comprobante : recibe
